Working code, quite clean, with README presentation.